syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative *.proto

package memcache;

option go_package=".;memcache";

service Cache {
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Set (SetRequest) returns (EmptyResponse) {}
  rpc Delete (DeleteRequest) returns (EmptyResponse) {}
}

message GetRequest {
  string key = 1;
}
message GetResponse {
  string value = 1;
  bool has = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message DeleteRequest {
  string key = 1;
}

message EmptyResponse {}
